--- a/assets/style.css
+++ b/assets/style.css
@@ -21,9 +21,21 @@ img {
   max-width: 100%;
 }
 
-h2, h3, h4 {
+h3, h4 {
   font-style: italic;
   font-weight: normal;
+}
+
+h2 {
+  font-size: 14px;
+  font-weight: normal;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  margin-top: 3em;
+}
+
+.post {
+  margin: 2em 0;
 }
 
 footer {
