--- a/assets/style.css
+++ b/assets/style.css
@@ -11,6 +11,7 @@ body {
 }
 
 a {
+  background-color: transparent;
   border-radius: 2px;
   color: #312;
   padding: 0;
@@ -30,7 +31,7 @@ header h1 {
   margin: 0;
   letter-spacing: 2px;
 }
-header span {
+header a {
   background-color: #d63915;
   border-radius: 1px;
   color: #fff;
@@ -40,7 +41,8 @@ header span {
                3px 3px 0 #312;
 }
 
-header small {
+header small,
+header time {
   display: inline-block;
   font-size: 14px;
   padding: 0 0 1.5em;
@@ -52,7 +54,8 @@ header small {
   padding-right: 4px;
 }
 
-header small:last-child {
+header small:last-child,
+header time:last-child {
   border-bottom: 1px solid #666;
   padding: 1.5em 0 1em;
 }
@@ -60,6 +63,9 @@ header small:last-child {
 dt {
   margin-top: 1em;
   font-weight: 800;
+}
+dt a:hover {
+  background-color: hsl(55, 50%, 80%);
 }
 dt em {
   font-weight: 400;
@@ -97,7 +103,13 @@ footer a {
   margin-bottom: 1em;
   padding: 2px 10px 0;
 }
-
+footer .social a {
+  background-color: transparent;
+}
 footer a:hover {
   background-color: #d5d5d5;
+}
+footer .social {
+  font-size: 14px;
+  margin-top: 1em;
 }
